# CGR-analysis-tool

./: .gitignore  .pylintrc  README.md  pyproject.toml
scripts/: example_jupyter.ipynb  example_py.py
