[tool.poetry]
name = "cgr-analysis-tool"
version = "0.1.0"
description = "IDEA poetry env for analysis"
authors = ["alexiscampan <alexis.campan@ut-capitole.fr>"]
readme = "README.md"
packages = [{include = "cgr_analysis_tool"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.1"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
plotly = "^5.11.0"
scikit-learn = "^1.1.3"
dash = "^2.7.0"
dash-bootstrap-components = "^1.2.1"
seaborn = "^0.12.1"
statsmodels = "^0.13.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
